SkillUp/force-app/main/default/objects/Course__c/fields/Cost_per_Seat__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Seat__c</fullName>
    <description>Cost per head of the cousre</description>
    <label>Cost per Seat</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>