SkillUp/force-app/main/default/objects/Course__c/fields/Is_Course_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Course_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Course Completed</label>
    <type>Checkbox</type>
</CustomField>