SkillUp/force-app/main/default/objects/Course__c/recordTypes/Course_Completion_Status.recordType-meta.xml
<RecordType>
    <fullName>Course_Completion_Status</fullName>
    <active>true</active>
    <label>Course Completion Status</label>
</RecordType>